# OSIn1000Lines

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.c  common.h  kernel.c  kernel.h  kernel.ld  run.sh  shell.c  user.c  user.h
docs/: 01_시작하기.md  02_RISCV_기초.md  03_부팅.md  04_HelloWorld.md  05_C_표준_라이브러리.md  06_커널 패닉.md  07_예외.md  08_메모리_할당.md  09_프로세스.md  10_페이지_테이블.md  11_어플리케이션.md  12_유저모드.md  13_시스템콜.md  14_디스크_IO.md
scripts/: build.sh  run.sh
src/: common.c  common.h  kernel.c  kernel.h  shell.c  user.h  user.ld
